Truncate long errors to avoid breaking the layout (bug 1151774)

--- a/public/stylus/_full-error.styl
+++ b/public/stylus/_full-error.styl
@@ -51,6 +51,8 @@
         .error-code {
             color: $dark-gray;
             text-shadow: 0 1px 0 $medium-gray;
+            display: -moz-box;
+            overflow: hidden;
         }
     }
 
